--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.25",
+        "laravel-echo": "^1.15.3",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "pusher-js": "^8.4.0-rc2"
+    },
+    "dependencies": {
+        "https-proxy-agent": "^7.0.2"
     }
 }
