--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "beyondcode/laravel-websockets": "^1.14",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "predis/predis": "~1.0",
+        "pusher/pusher-php-server": "^7.2",
+        "react/promise": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
