--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "lint": "eslint ./"
     },
     "devDependencies": {
+        "@eslint/js": "^9.7.0",
+        "@html-eslint/eslint-plugin": "^0.25.0",
+        "@html-eslint/parser": "^0.25.0",
         "axios": "^0.25",
+        "eslint": "^9.7.0",
+        "globals": "^15.8.0",
         "laravel-echo": "^1.15.3",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
