--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.7",
         "predis/predis": "~1.0",
         "pusher/pusher-php-server": "^7.2",
-        "react/promise": "^2.7"
+        "react/promise": "^2.7",
+        "spatie/laravel-query-builder": "^5.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
