--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
         "axios": "^0.25",
         "eslint": "^9.7.0",
         "globals": "^15.8.0",
-        "laravel-echo": "^1.15.3",
+        "laravel-echo": "^1.16.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "pusher-js": "^8.4.0-rc2"
+        "pusher-js": "^8.3.0"
     },
     "dependencies": {
         "https-proxy-agent": "^7.0.2"
