--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "opcodesio/log-viewer": "^3.12",
         "predis/predis": "~1.0",
         "pusher/pusher-php-server": "^7.2",
         "react/promise": "^2.7"
