--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "lint": "eslint ./"
+        "lint": "eslint public/js"
     },
     "devDependencies": {
-        "@eslint/js": "^9.7.0",
-        "@html-eslint/eslint-plugin": "^0.25.0",
-        "@html-eslint/parser": "^0.25.0",
+        "@eslint/js": "^9.16.0",
         "axios": "^0.25",
-        "eslint": "^9.7.0",
-        "globals": "^15.8.0",
+        "eslint": "^9.16.0",
+        "globals": "^15.13.0",
         "laravel-echo": "^1.16.1",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "prettier": "^3.4.2",
         "pusher-js": "^8.3.0"
     },
     "dependencies": {
