--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.7",
         "opcodesio/log-viewer": "^3.12",
         "predis/predis": "~1.0",
