--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.7",
+        "lcobucci/jwt": "^4.0",
         "opcodesio/log-viewer": "^3.12",
         "predis/predis": "~1.0",
         "pusher/pusher-php-server": "^7.2",
-        "react/promise": "^2.7"
+        "react/promise": "^2.7",
+        "vonage/client": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
