--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "opcodesio/log-viewer": "^3.12",
         "predis/predis": "~1.0",
         "pusher/pusher-php-server": "^7.2",
-        "react/promise": "^2.7"
+        "react/promise": "^2.7",
+        "spatie/laravel-backup": "^8.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
