--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,40 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=d021dd7d3774ba6e82af1f8847a07867",
+    "/js/minify/chat/index.js": "/js/minify/chat/index.js?id=6b407622c47ea98ae93b7a3b48a89732",
+    "/js/minify/chat/show_users.js": "/js/minify/chat/show_users.js?id=c6a112405337f8f9b9731e393a17585e",
+    "/js/minify/profile/index.js": "/js/minify/profile/index.js?id=39f76d47d1a5010411bfe4deb9415e81",
+    "/js/minify/project/create.js": "/js/minify/project/create.js?id=28b8e23f262e240887603210d13917d2",
+    "/js/minify/project/edit.js": "/js/minify/project/edit.js?id=77e1e0df2c10551daddeff5a15a64aa9",
+    "/js/minify/project/index.js": "/js/minify/project/index.js?id=935de721991698a3953fdcd499726d2c",
+    "/js/minify/project/show.js": "/js/minify/project/show.js?id=0fb3a7b9c3f85d4d1eb37171e3dae400",
+    "/js/minify/transaction/create.js": "/js/minify/transaction/create.js?id=031071db6430d36ec7c92ba7e6107f8d",
+    "/js/minify/transaction/index.js": "/js/minify/transaction/index.js?id=c20d94b3c399913e05f7a886363095c5",
+    "/js/minify/skill/add.js": "/js/minify/skill/add.js?id=0a625839aea33465b8696faa4f0990bb",
+    "/js/minify/skill/create.js": "/js/minify/skill/create.js?id=656e1cd7a3fb1b79161e94fd011b954e",
+    "/js/minify/general/general.js": "/js/minify/general/general.js?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/js/minify/navbar/navbar.js": "/js/minify/navbar/navbar.js?id=991c0975b0b9ce4a13b52d4a6e4120de",
+    "/js/minify/admins/debate/access_chat.js": "/js/minify/admins/debate/access_chat.js?id=dabd7064a434d575eb7b9e815436c955",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7d8ad5cb9c940",
+    "/js/minify/chat/index.min.js": "/js/minify/chat/index.min.js?id=6b407622c47ea98ae93b7a3b48a89732",
+    "/js/minify/chat/show_users.min.js": "/js/minify/chat/show_users.min.js?id=c6a112405337f8f9b9731e393a17585e",
+    "/js/minify/profile/index.min.js": "/js/minify/profile/index.min.js?id=39f76d47d1a5010411bfe4deb9415e81",
+    "/js/minify/project/create.min.js": "/js/minify/project/create.min.js?id=28b8e23f262e240887603210d13917d2",
+    "/js/minify/project/edit.min.js": "/js/minify/project/edit.min.js?id=77e1e0df2c10551daddeff5a15a64aa9",
+    "/js/minify/project/index.min.js": "/js/minify/project/index.min.js?id=935de721991698a3953fdcd499726d2c",
+    "/js/minify/project/show.min.js": "/js/minify/project/show.min.js?id=0fb3a7b9c3f85d4d1eb37171e3dae400",
+    "/js/minify/transaction/create.min.js": "/js/minify/transaction/create.min.js?id=031071db6430d36ec7c92ba7e6107f8d",
+    "/js/minify/transaction/index.min.js": "/js/minify/transaction/index.min.js?id=c20d94b3c399913e05f7a886363095c5",
+    "/js/minify/skill/add.min.js": "/js/minify/skill/add.min.js?id=0a625839aea33465b8696faa4f0990bb",
+    "/js/minify/skill/create.min.js": "/js/minify/skill/create.min.js?id=656e1cd7a3fb1b79161e94fd011b954e",
+    "/js/minify/general/general.min.js": "/js/minify/general/general.min.js?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/js/minify/navbar/navbar.min.js": "/js/minify/navbar/navbar.min.js?id=991c0975b0b9ce4a13b52d4a6e4120de",
+    "/js/minify/admins/debate/access_chat.min.js": "/js/minify/admins/debate/access_chat.min.js?id=dabd7064a434d575eb7b9e815436c955",
+    "/css/minify/users/chat/index.css": "/css/minify/users/chat/index.css?id=35545a79823dab0ff6e2880844b6610e",
+    "/css/minify/users/chat/index.min.css": "/css/minify/users/chat/index.min.css?id=35545a79823dab0ff6e2880844b6610e",
+    "/css/minify/users/profile/index.css": "/css/minify/users/profile/index.css?id=670abb60cf7d4f705869eaa648623c00",
+    "/css/minify/users/profile/index.min.css": "/css/minify/users/profile/index.min.css?id=670abb60cf7d4f705869eaa648623c00",
+    "/css/minify/users/project/index.css": "/css/minify/users/project/index.css?id=dc3fa7aab627ff6b5c90a5d569b9ba17",
+    "/css/minify/users/project/index.min.css": "/css/minify/users/project/index.min.css?id=dc3fa7aab627ff6b5c90a5d569b9ba17",
+    "/css/minify/navbar.css": "/css/minify/navbar.css?id=0993f526b754ac212256e43061f02c26",
+    "/css/minify/navbar.min.css": "/css/minify/navbar.min.css?id=0993f526b754ac212256e43061f02c26"
 }
